--- a/src/styles/frontend.css
+++ b/src/styles/frontend.css
@@ -20,13 +20,15 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .skill-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 40px 40px 40px;
+    margin: 10px 20px 40px 20px;
 }
 
 .skill-item p {
